Added new chart type (linear with std dev), created 2 groups('basic analyses', 'parameters influence')

--- a/panel.jade.template
+++ b/panel.jade.template
@@ -80,5 +80,5 @@ script.
         toggleable: true
       }
     });
-    $("#searchList dd>div").first().addClass("active");
+    $("#searchList dd>div").addClass("active");
   });
