--- a/config.js.template
+++ b/config.js.template
@@ -3,6 +3,8 @@ module.exports = {
 	server_port: 8080,
 	server_prefix: "/chart",		//suffix?
 	db_url: "mongodb://<<DB_IP>>:27017/scalarm_db",
+	information_service_address: <<IS_ADDRESS>>,
+	information_service_port: <<IS_PORT>>,
 	multicast_address: "224.1.2.3",
 	multicast_port: 8000,
 	log_filename: <<LOG_FILENAME>>
