Added subgroups in select tag, polling done

--- a/panel.jade.template
+++ b/panel.jade.template
@@ -84,17 +84,15 @@ script.
 
     function update_moes(){
       var moes = $(".moes");
-      var moes_and_params = $(".moes_and_params");
       var moes_values = moes.children().map(function() { return $(this).attr("value"); }).toArray();
       $.getJSON('#{prefix}/moes?id=#{experimentID}', function(data){
         data.map(function(d){
-          if(moes_values.indexOf(d.id)){
+          if(moes_values.indexOf(d.id)<0){
             var option = "<option value=" + d.id + ">" + d.label + "</option";
             moes.append(option);
-            moes_and_params.append(option);
           }
         });
       });
     }
-    setInterval(update_moes, 3000);
+    setInterval(update_moes, 30000);
   });
