Cleaned up config templates

--- a/config.js.template
+++ b/config.js.template
@@ -1,7 +1,7 @@
 module.exports = {
 	server_ip: <<SERVER_IP>>,
 	server_port: 8080,
-	server_prefix: "/chart",		//suffix?
+	server_prefix: "/chart",
 	information_service_address: process.env.INFORMATION_SERVICE_URL,
 	information_service_development: true,
 	multicast_address: "224.1.2.3",
