--- a/decoder_configuration.js.template
+++ b/decoder_configuration.js.template
@@ -1,7 +1,7 @@
 module.exports = {
-	secret_key_base: "<<SECRET_KEY_BASE>>",						//for development: "d132fd22bc612e157d722e980c4b0525b938f225f9f7f66ea"
-	encrypted_cookie_salt: "<<COOKIE_SALT>>",					//for development: "encrypted cookie"
-	encrypted_signed_cookie_salt: "<<SIGNED_COOKIE_SALT>>",		//for development: "signed encrypted cookie"
+	secret_key_base: process.env.INFORMATION_SERVICE_URL,
+	encrypted_cookie_salt: "<<COOKIE_SALT>>",
+	encrypted_signed_cookie_salt: "<<SIGNED_COOKIE_SALT>>",
 	iterations: 1000,
 	keylen: 64,
 	cipherName: 'aes-256-cbc'
