--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^1.0.0-pre.1",
     "log4js": "^0.6.21",
     "mongodb": "^1.4.8",
+    "rstats": "^0.3.1",
     "websocket": "^1.0.8"
   }
 }
