--- a/config.js.template
+++ b/config.js.template
@@ -1,4 +1,5 @@
 module.exports = {
+	server_ip: <<SERVER_IP>>,
 	server_port: 8080,
 	server_prefix: "/chart",
 	information_service_address: process.env.INFORMATION_SERVICE_URL,
